--- a/preferences.css
+++ b/preferences.css
@@ -69,6 +69,11 @@ button {
   color: #3300FF;
 }
 
+button.active {
+  background-color: #7ce9b6;
+
+}
+
 .bottom {
   background-color: #bef4dbff;
 }
