--- a/preferences.css
+++ b/preferences.css
@@ -11,6 +11,12 @@
   background-color: #bef4dbff;
 }
 
+.middle {
+  padding-top: 20px;
+  padding-bottom: 15px;
+  background-color: #bef4dbff;
+}
+
 .title {
   font-size: 56px;
   margin: 0px;
