--- a/results.css
+++ b/results.css
@@ -12,3 +12,15 @@ h1 {
 .bottom {
   background-color: #bef4dbff
 }
+
+button {
+  background-color: #f2f2f2;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5x;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2em;
+  width: 14em
+}
