--- a/results.css
+++ b/results.css
@@ -24,3 +24,14 @@ button {
   line-height: 2em;
   width: 14em
 }
+
+title {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #bef4dbff;
+}
+
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
