--- a/results.css
+++ b/results.css
@@ -9,8 +9,11 @@ h1 {
   font-size: 32px;
 }
 
+.bottom {
+  background-color: #bef4dbff
+}
+
 button {
-  background-color: #f2f2f2;
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 5x;
